# imgui-d

./: .gitignore  LICENSE  README.md  dub.json  extract.py
cmake/: CMakeLists.txt
examples/basic_demo_gl3/: .gitignore  dub.json  dub.selections.json
examples/basic_demo_gl3/scripts/: getdeps.ps1
examples/basic_demo_gl3/source/: app.d  gl3_impl.d  glfw_impl.d
gentool/: imgui.json
source/imgui/: imgui_base.d  imgui_ns.d  imgui_ns_gen.d  package.d
